--- a/css/adaptiv.css
+++ b/css/adaptiv.css
@@ -1,11 +1,11 @@
-@media (min-width: 1940px) {
+@media (min-width: 1920px) {
     .intro__subtitle {
-        margin-bottom: 150px;
+        margin-bottom: 140px;
     }
     .video__content {
         position: absolute;
-        z-index: 3;
-        left: 0px;
+        z-index: 2;
+        left: 1px;
     }
 }
 
@@ -15,13 +15,13 @@
         margin: 1 auto;
     }
     .header__wrapper {
-        height: 110px;
+        height: 120px;
         grid-area: header;
         display: grid;
         grid-template: 1fr / 1fr minmax(auto, 150px) minmax(auto, 1100px) 1fr;
     }
     .header__logo img, .footer__logo img {
-        max-width: 50px;
+        max-width: 45px;
         display: block;
     }
     .footer {
@@ -32,10 +32,10 @@
     }
     .intro__row {
         position: absolute;
-        bottom: 50px;
+        bottom: 54px;
     }
     .our__service-content:nth-child(3), .our__service-content:nth-child(5) {
-        padding-left: 0px;
+        padding-left: 1px;
     }
     .advantages_row {
         display: flex;
@@ -43,8 +43,8 @@
         justify-content: space-between;
     }
     .video__text {
-        font-weight: 600;
-        font-size: 28px;
+        font-weight: 500;
+        font-size: 26px;
         line-height: 39px;
         max-width: 215px;
     }
@@ -61,19 +61,19 @@
     }
     .header__burger {
         display: block;
-        width: 30px;
-        height: 20px;
+        width: 35px;
+        height: 25px;
         position: absolute;
         right: 0;
         top: 50%;
-        z-index: 3;
+        z-index: 4;
     }
     .header__burger:before, .header__burger::after {
         content: " ";
-        background-color: red;
+        background-color: rgb(0, 255, 255);
         position: absolute;
         width: 100%;
-        height: 2px;
+        height: 1px;
         right: 10px;
         bottom: 25px;
         transition: all 0.3s ease 0s;
